@@ -34,9 +34,7 @@
    <permission-role>Reader</permission-role>
   </permission-map>
   <permission-map name="List folder contents" acquired="False">
-   <permission-role>Administrator</permission-role>
    <permission-role>Manager</permission-role>
-   <permission-role>Reader</permission-role>
   </permission-map>
   <permission-map name="Modify portal content" acquired="False">
    <permission-role>Manager</permission-role>
