@@ -5,6 +5,10 @@ Changelog
 2.0.3 (unreleased)
 ------------------
 
+- Removed 'List folder contents' permission from anyone but Manager in
+  dossier and templatedossier workflows.
+  [lgraf]
+
 - Updated workflow for new Administrator role
   [lgraf]
 
